--- a/awse/templates/awse/index.html
+++ b/awse/templates/awse/index.html
@@ -104,6 +104,11 @@ Convenient and beautiful search engine
                     <br/>
                     <i><u>Published at {{ add_.3 }} (UTC)</u></i>
                 </label>
+                <br/>
+                {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
+                <div id="{{ badge_block }}" class="badge_block_info"></div>
+                <script id="{{ script_id }}">let x{{ title_badge }}="News&nbsp;";let x{{ icon_badge }}="far fa-newspaper";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
+                {% endwith %}
             {% endif %}
             </div></div></div>
         </div>
