--- a/awse/templates/awse/load_more.html
+++ b/awse/templates/awse/load_more.html
@@ -22,14 +22,7 @@
                         {% endwith %}
                         <br/>
                         {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
-                        <div id="{{ badge_block }}" style="
-                            background: #fff;
-                            border-radius: 0.5em;
-                            font-weight: 600;
-                            font-size: 0.9em;
-                            margin-top: 1em;
-                            display: inline-block;
-                        "></div>
+                        <div id="{{ badge_block }}" class="badge_block_info"></div>
                         <script id="{{ script_id }}">let x{{ title_badge }}="COVID-19&nbsp;";let x{{ icon_badge }}="fas fa-viruses";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
                         {% endwith %}
                         {% with script_id=64|get_random_string telegram_share_link=48|get_random_string let_id=12|get_random_string %}
@@ -60,14 +53,7 @@
                         {% endwith %}
                         <br/>
                         {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
-                        <div id="{{ badge_block }}" style="
-                            background: #fff;
-                            border-radius: 0.5em;
-                            font-weight: 600;
-                            font-size: 0.9em;
-                            margin-top: 1em;
-                            display: inline-block;
-                        "></div>
+                        <div id="{{ badge_block }}" class="badge_block_info"></div>
                         <script id="{{ script_id }}">let x{{ title_badge }}="COVID-19&nbsp;";let x{{ icon_badge }}="fas fa-viruses";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
                         {% endwith %}
                         {% with script_id=64|get_random_string telegram_share_link=48|get_random_string let_id=12|get_random_string %}
@@ -95,14 +81,7 @@
                         </label>
                         <br/>
                         {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
-                        <div id="{{ badge_block }}" style="
-                            background: #fff;
-                            border-radius: 0.5em;
-                            font-weight: 600;
-                            font-size: 0.9em;
-                            margin-top: 1em;
-                            display: inline-block;
-                        "></div>
+                        <div id="{{ badge_block }}" class="badge_block_info"></div>
                         <script id="{{ script_id }}">let x{{ title_badge }}="Calculator&nbsp;";let x{{ icon_badge }}="fas fa-calculator";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
                         {% endwith %}
                     </div>
@@ -124,14 +103,7 @@
                         </label>
                         <br/>
                         {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
-                        <div id="{{ badge_block }}" style="
-                            background: #fff;
-                            border-radius: 0.5em;
-                            font-weight: 600;
-                            font-size: 0.9em;
-                            margin-top: 1em;
-                            display: inline-block;
-                        "></div>
+                        <div id="{{ badge_block }}" class="badge_block_info"></div>
                         <script id="{{ script_id }}">let x{{ title_badge }}="Translator&nbsp;";let x{{ icon_badge }}="fas fa-language";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
                         {% endwith %}
                     </div>
@@ -229,14 +201,7 @@
                         </label>
                         <br/>
                         {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
-                        <div id="{{ badge_block }}" style="
-                            background: #fff;
-                            border-radius: 0.5em;
-                            font-weight: 600;
-                            font-size: 0.9em;
-                            margin-top: 1em;
-                            display: inline-block;
-                        "></div>
+                        <div id="{{ badge_block }}" class="badge_block_info"></div>
                         <script id="{{ script_id }}">let x{{ title_badge }}="Namaz&nbsp;";let x{{ icon_badge }}="fas fa-quran";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
                         {% endwith %}
                     </div>
@@ -259,14 +224,7 @@
                             </label>
                             <br/>
                             {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
-                            <div id="{{ badge_block }}" style="
-                                background: #fff;
-                                border-radius: 0.5em;
-                                font-weight: 600;
-                                font-size: 0.9em;
-                                margin-top: 1em;
-                                display: inline-block;
-                            "></div>
+                            <div id="{{ badge_block }}" class="badge_block_info"></div>
                             <script id="{{ script_id }}">let x{{ title_badge }}="Telegram&nbsp;";let x{{ icon_badge }}="fab fa-telegram-plane";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
                             {% endwith %}
                         </div>
@@ -311,14 +269,7 @@
                             </div>
                             <br/>
                             {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
-                            <div id="{{ badge_block }}" style="
-                                background: #fff;
-                                border-radius: 0.5em;
-                                font-weight: 600;
-                                font-size: 0.9em;
-                                margin-top: 1em;
-                                display: inline-block;
-                            "></div>
+                            <div id="{{ badge_block }}" class="badge_block_info"></div>
                             <script id="{{ script_id }}">let x{{ title_badge }}="Images&nbsp;";let x{{ icon_badge }}="far fa-image";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
                             {% endwith %}
                         </div>
