--- a/awse/templates/awse/load_more.html
+++ b/awse/templates/awse/load_more.html
@@ -244,7 +244,7 @@
                                             <div>
                                                 <a href="{{ el_images.image.contextLink }}" target="_blank">
                                                     <img onerror="imgError(this);" style="border-radius: 0.5em;margin-bottom: 5px;width: 50%;margin-right: 5px;-webkit-appearance: none;max-height:200px;max-width: 140px;padding: 0;box-shadow: 0px 3px 8px 0px rgb(0 0 0 / 40%)"
-                                                    src="{% url 'imageproxy' %}?data={{ el_images.image.thumbnailLink|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}" alt="Preview image">
+                                                    src="{% url 'imageproxy' %}?data={{ el_images.image.thumbnailLink|link_encrypt_img }}&v=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}" alt="Preview image">
                                                 </a>
                                             </div>
                                             <div style="background: #313131;padding: 3px;border-radius: 0.5em">
@@ -321,7 +321,7 @@
                                     {% if el.1.thumb and not el.1.youtube_id %}
                                         <a target="_blank" href="{{ el.1.link }}">
                                             <img
-                                                    src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
+                                                    src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&v=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
                                                     onerror="imgError(this);"
                                                     style="margin-top: 1%;max-width: 32%;min-width: 25%;margin-right: 0.9em;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
                                                     alt="Preview image"
@@ -330,7 +330,7 @@
                                     {% elif el.1.youtube_id %}
                                         <div class="view-container-youtube-video-aware">
                                             <img
-                                                    src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
+                                                    src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&v=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
                                                     onerror="imgError(this);"
                                                     style="margin-top:1%;max-width:32%;min-width:25%;margin-right:0.9em;height:auto;-webkit-appearance:none;border-radius:0.5em;padding:0;text-align:left;padding-bottom:1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%)"
                                                     class="video_youtube_preview_image_aware"
