--- a/awse/templates/awse/index.html
+++ b/awse/templates/awse/index.html
@@ -120,7 +120,7 @@ Convenient and beautiful search engine
         <div style="margin: auto;">
             <p class="no-more-results-text" style="color: #828282;transition: margin-bottom 1s;font-size: 14px;visibility: hidden;text-align: center;">No more results</p>
         </div>
-        <button style="margin:0 auto;display:block;background-color:#121213;visibility: hidden;margin-bottom: 5%;" class="btn btn-dark load-more-end-butt-search-array">Load more&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
+        <button style="margin:0 auto;display:block;background-color:#121213;visibility: hidden;margin-bottom: 5%;" class="btn btn-dark load-more-end-butt-search-array">Load more<span style="padding-left:5px" class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
     </div>
 {% endblock %}
 
