--- a/awse/templates/awse/error.html
+++ b/awse/templates/awse/error.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>AWARE - Error {{ error_code }}</title>
     <style>
-      *{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#0e0e10;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}p{margin:11px 0 22px;overflow:hidden;color:#a5a5a5;}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}#logo{margin-left:-5px;color:#fff;font-size: 5em;}@media only screen and (min-resolution:192dpi){}@media only screen and (-webkit-min-device-pixel-ratio:2){}#logo{display:inline-block;height:54px;width:150px}
+      *{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#0e0e10;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}p{margin:11px 0 22px;overflow:hidden;color:#a5a5a5}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}#logo{margin-left:-5px;color:#fff;font-size:5em}@media only screen and (min-resolution:192dpi){}@media only screen and (-webkit-min-device-pixel-ratio:2){}#logo{display:inline-block;height:54px;width:150px}
     </style>
     </head><body><a href="https://www.awse.us/?q=What+does+error+{{ error_code }}+mean%3F"><span id="logo" aria-label="AWSE.US">AWSE.US</span></a>
     <p><b>{{ error_code }}.&nbsp;</b><ins>That’s an error.</ins>
