--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -9,7 +9,7 @@
         {# JavaScripts load #}
         {% include 'awse/global/head_scripts.html' %}
 
-        {% CSS files, search config, fonts %}
+        {# CSS files, search config, fonts #}
         {% include 'awse/global/head_links.html' %}
 
         <title>{% block title %}{% endblock %}</title>
